I did a test through the W3 validator for the index, upload and css and had some issues there which have since been fixed leaving me with only 1 warning on the about section, it mentions adding h2 to h6, but I am glad there are no other issues elsewhere. there are errors in the css because of bootstrap but I think this is due to these not being used, it says about the text decoration and anchor overflow. There was 1 error that was my doing in the css which I have removed as this didn't work so wasnt required.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,7 +217,15 @@ if you find the colour for white this may help
 p.donate {
     font-family: Montserrat, sans-serif;
     margin-left: 42px;
-  
+}
+
+
+.we-transfer {
+    color: #2a5490;
+}
+
+.we-transfer:hover  {
+    color: #df6530;
 }
 
 
